# allegro5

./: CMakeLists.txt  main.c
